@@ -144,6 +144,7 @@ DISTFILES =	.gitignore \
 	config/popp/123658.xml \
 	config/qees/reto-plugin-switch.xml \
 	config/qubino/ZMNHAA2.xml \
+	config/qubino/ZMNHAD1.xml \
 	config/qubino/ZMNHBA2.xml \
 	config/qubino/ZMNHCA2.xml \
 	config/qubino/ZMNHDA2.xml \
